namespaces/live-1.cloud-platform.service.justice.gov.uk/oasys-keycloak-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oasys-keycloak-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "production"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/application: "oasys-keycloak"
    cloud-platform.justice.gov.uk/owner: "Sentence Planning Team: sentence-plan-team@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/oasys-keycloak.git"
